# linkman

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
api/: Cargo.toml  Dockerfile
api/migrations/: 20240517000001_multi_user_init.sql
api/src/: main.rs
extension/: README.md  manager.html  manifest.json  options.html  package.json  popup.html  popup.js
extension/src/: background.test.ts  background.ts  manager.tsx  options.tsx
linkman-extension/: background.js  manifest.json  options.html  options.js  popup.html  popup.js  results.html  results.js  utils.js
linkman-server/: .dockerignore  Cargo.toml  Dockerfile
linkman-server/.sqlx/: query-10c27c9aaf74697ad66709a649a1ac87235fbfdc6859f4183d2944182b3d1342.json  query-2ac89fa1c121cc30f90f53adf9429c64397b6e70c156118e3310807dc981dd15.json  query-86f7f03976c7349e9fcfb584e21cabdecfba2dd8908f43457fa34900ed2d5651.json  query-c5627c13f6cdae7c9ce5c48ec10a40bfc1c217c924e11d787491d1c6b6abb508.json  query-d1ce30f34c38147ea70a16ab8c3f6011304b2765e7c77496e58d37de64144bc5.json  query-db87ebd605ed662d56b8f4e1b7543cc0c1b9e44fae59649df559efb6182ee2a0.json  query-eff479d0d0bc3fad01de718d6688fd8d3084f86b0d5cee9808b9d2e32c323997.json  query-f8d1913877757e2259f03fe6f047bb928cee16e9641d0bdfcd6b3023374a06f7.json
linkman-server/migrations/: 20260223000000_init.sql
linkman-server/src/: main.rs
